--- a/Spark HTML/css/custom/style.css
+++ b/Spark HTML/css/custom/style.css
@@ -457,13 +457,17 @@ header .logo {
 }
 
 header .logo img {
-	height: 100%;
+	/**height: 100%;**/
 }
 
 header .headerBottomArea {
 	padding: 30px 0;
-	border-bottom: 1px solid #eaeaea;
-    background-color: white
+	border-bottom: 1px solid grey;
+    background-color: white;
+   -webkit-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
+    height: 150PX
 }
 
 header nav#navbar {
@@ -481,9 +485,12 @@ header nav#navbar ul > li {
 	display: inline-block;
 	position: relative
 }
+header nav#navbar ul > li:hover{
+    color:blue
+}
 
 header nav#navbar ul > li > a {
-	color: black;
+	color: grey;
 	display: inline-block;
 	font-size: 13px;
 	line-height: 37px;
@@ -493,6 +500,8 @@ header nav#navbar ul > li > a {
 	-webkit-transition: .4s;
 	transition: .4s;
 }
+
+
 
 header nav#navbar ul > li.subPar > a:after {
 	margin-left: 10px;
@@ -546,7 +555,7 @@ header nav#navbar ul.sub-menu > li.subPar > a:after {
 
 	
 	header nav#navbar > ul {
-		border-right: 1px solid #e4e9f0;
+		/**border-right: 1px solid #e4e9f0;**/
 	}
 	header nav#navbar ul > li::before {
 		background: transparent;
@@ -668,7 +677,7 @@ header nav#navbar ul.sub-menu > li.subPar > a:after {
 	}
 	header nav#navbar ul > li.current-menu-item > a,
 	header nav#navbar ul > li > a:hover {
-		color: #233141
+		color: lightskyblue
 	}
 
 	#nav > li ul.sub-menu li:last-child {
