--- a/Spark HTML/css/custom/style.css
+++ b/Spark HTML/css/custom/style.css
@@ -462,7 +462,7 @@ header .logo img {
 
 header .headerBottomArea {
 	padding: 30px 0;
-	border-bottom: 1px solid grey;
+	border-bottom: 1px solid blue;
     background-color: white;
    -webkit-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
@@ -1644,25 +1644,31 @@ form.domainForm {
 	text-align: center;
 	line-height: 28px;
 	margin-top: 60px;
+    background-color: black;
+    
 }
 
 .singleService .serviceIcon {
-	height: 85px;
+	height: 200px;
 	margin-bottom: 30px;
 }
 
 .serviceContent .h3 {
-	font-size: 22px;
+	font-size: 2.5em;
 	margin-bottom: 25px;
+    color:white;
 }
 
 .serviceContent p {
 	margin: 0;
+    font-size: 1.5em;
+    color: white;
 }
 
 .serviceIcon > img {
 	max-height: 100%;
 }
+
 
 
 /*
@@ -2062,7 +2068,7 @@ footer {
 
 .aboutTxt,
 .aboutT p {
-	font-size: 16px;
+	font-size: 1.4em;
 	line-height: 30px;
 }
 
