--- a/Spark HTML/css/responsive/responsive.css
+++ b/Spark HTML/css/responsive/responsive.css
@@ -172,15 +172,15 @@ px      68    160    252    344    436    528    620    712    */
 		display: none
 	}
 	.serviceContent .h3{
-		font-size: 19px;
+		font-size: 1.5em;
 		margin-bottom: 15px
 	}
 	.serviceContent,.serviceContent p {
-		font-size: 13px;
+		font-size: 1.2em;
 		line-height: 20px;
 	}
 	.singleService .serviceIcon{
-		height: 50px;
+		height: 120px;
 		margin-bottom: 20px
 	}
 	.ctaImgOne{
@@ -515,7 +515,7 @@ px      68    160    252    344    436    528    620    712    */
 		margin-bottom: 40px
 	}
 	.singleService .serviceIcon{
-		height: 50px;
+		height: 100px;
 		margin-bottom: 20px
 	}
 	.serviceContent .h3{
