--- a/Spark HTML/css/custom/style.css
+++ b/Spark HTML/css/custom/style.css
@@ -1644,7 +1644,7 @@ form.domainForm {
 	text-align: center;
 	line-height: 28px;
 	margin-top: 60px;
-    background-color: black;
+    background-color:white;
     
 }
 
@@ -1654,15 +1654,15 @@ form.domainForm {
 }
 
 .serviceContent .h3 {
-	font-size: 2.5em;
+	font-size: 3em;
 	margin-bottom: 25px;
-    color:white;
+    color:black;
 }
 
 .serviceContent p {
 	margin: 0;
     font-size: 1.5em;
-    color: white;
+    color: black;
 }
 
 .serviceIcon > img {
