--- a/Spark HTML/pag2/css/app.css
+++ b/Spark HTML/pag2/css/app.css
@@ -1,10 +1,6 @@
 
 body{
-    background-image: url(../assets/fondo-body.jpg);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    
     font-family: 'Nunito', sans-serif;
 }
 
@@ -18,10 +14,11 @@ body{
     border-bottom: 0px  
 }
 
-#inspira{
-    margin-top: 50px
-}
 
+#nosotros{
+    padding-top:70px;
+    background-image: url(/pag2/assets/fondo-body.jpg)
+}
 
 #footer{
     background-color:rgb(29, 29, 29);
@@ -132,12 +129,10 @@ background-color: transparent;
     
 }
 
-
-
-
 .parraf1{
     font-size: 23px
 }
+
 
 
 
@@ -152,3 +147,73 @@ background-color: transparent;
 @media print, screen and (min-width: 64em){
     
 }
+
+
+
+.v-header{
+    height:100vh;
+    display:flex;
+    color:#fff;
+  }
+  
+  .container{
+    max-width:960px;
+    padding-left:1rem;
+    padding-right:1rem;
+    margin:auto;
+    text-align:center;
+  }
+  
+  .fullscreen-video-wrap{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100vh;
+    overflow:hidden;
+  }
+  
+  .fullscreen-video-wrap video{
+    min-height:100%;
+    min-width:100%;
+  }
+  
+  .header-overlay{
+    height:100vh;
+    position: absolute;
+    top:0;
+    left:0;
+    width:100vw;
+    z-index:1;
+    background:black;
+    opacity:0.85;
+  }
+  
+  .header-content{
+    z-index:2;
+  }
+  
+  
+  
+  .btn{
+    background: #34b3a0;
+    color:#fff;
+    font-size:1.2rem;
+    padding: 1rem 2rem;
+    text-decoration: none;
+  }
+  
+  .section{
+    padding:20px 0;
+  }
+  
+  .section-b{
+    background:#333;
+    color:#fff;
+  }
+  
+  @media(max-width:960px){
+    .container{
+      
+    }
+  }
