--- a/Spark HTML/pag2/css/app.css
+++ b/Spark HTML/pag2/css/app.css
@@ -14,10 +14,19 @@ body{
     border-bottom: 0px  
 }
 
+.header{
+    z-index: 999 !important;
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    border-bottom: 2px solid blue;
+}
 
 #nosotros{
     padding-top:70px;
-    background-image: url(/pag2/assets/fondo-body.jpg)
+    background-image: url(/pag2/assets/fondo-body.jpg);
+    background-size: cover;
+    background-color: transparent;
 }
 
 #footer{
@@ -150,23 +159,11 @@ background-color: transparent;
 
 
 
-.v-header{
-    height:100vh;
-    display:flex;
-    color:#fff;
-  }
-  
-  .container{
-    max-width:960px;
-    padding-left:1rem;
-    padding-right:1rem;
-    margin:auto;
-    text-align:center;
-  }
+
   
   .fullscreen-video-wrap{
     position:absolute;
-    top:0;
+
     left:0;
     width:100%;
     height:100vh;
@@ -180,28 +177,19 @@ background-color: transparent;
   
   .header-overlay{
     height:100vh;
-    position: absolute;
-    top:0;
+  
     left:0;
-    width:100vw;
+    width:100%;
     z-index:1;
     background:black;
     opacity:0.85;
   }
   
   .header-content{
-    z-index:2;
+    z-index:3;
+    margin-top:60vh
   }
   
-  
-  
-  .btn{
-    background: #34b3a0;
-    color:#fff;
-    font-size:1.2rem;
-    padding: 1rem 2rem;
-    text-decoration: none;
-  }
   
   .section{
     padding:20px 0;
