--- a/Spark HTML/pag2/css/app.css
+++ b/Spark HTML/pag2/css/app.css
@@ -162,8 +162,61 @@ background-color: transparent;
 }
 
 .section-servicios{
-    background-color: rgb(196, 191, 191);
+    background-color: rgb(121, 145, 26);
     padding-top:30px
+}
+.pq-elergirnos{
+    padding: 15px;margin-bottom: 40px;
+            box-shadow: 0 5px 5px -5px #333;
+}
+
+.serv-di-web{
+    border:1px solid rgb(255, 255, 255);
+    background-color:rgb(201, 207, 107);
+    padding: 5px;
+}
+
+.serv-text{
+    color: #333
+}
+
+.fullscreen-video-wrap{
+    position:absolute;
+
+    left:0;
+    width:100%;
+    height:100vh;
+    overflow:hidden;
+}
+  
+.fullscreen-video-wrap video{
+    min-height:100%;
+    min-width:100%;
+}
+  
+.header-overlay{
+    height:100vh;
+  
+    left:0;
+    width:100%;
+    z-index:1;
+    background:black;
+    opacity:0.85;
+}
+  
+.header-content{
+    z-index:3;
+    margin-top:60vh
+}
+  
+  
+.section{
+    padding:20px 0;
+}
+  
+.section-b{
+    background:#333;
+    color:#fff;
 }
 
 /* Media patalla pequeñas */
@@ -188,47 +241,6 @@ background-color: transparent;
 
 
   
-  .fullscreen-video-wrap{
-    position:absolute;
-
-    left:0;
-    width:100%;
-    height:100vh;
-    overflow:hidden;
-  }
-  
-  .fullscreen-video-wrap video{
-    min-height:100%;
-    min-width:100%;
-  }
-  
-  .header-overlay{
-    height:100vh;
-  
-    left:0;
-    width:100%;
-    z-index:1;
-    background:black;
-    opacity:0.85;
-  }
-  
-  .header-content{
-    z-index:3;
-    margin-top:60vh
-  }
   
   
-  .section{
-    padding:20px 0;
-  }
   
-  .section-b{
-    background:#333;
-    color:#fff;
-  }
-  
-  @media(max-width:960px){
-    .container{
-      
-    }
-  }
