--- a/Spark HTML/pag2/css/app.css
+++ b/Spark HTML/pag2/css/app.css
@@ -53,6 +53,7 @@ background-color: transparent;
 
 .section-nosotros2{
     background-color: rgba(14, 13, 13, 0.7);
+    height: 380px;
 }
 
 /* Imagen de fondo de Innovacion */
@@ -70,7 +71,7 @@ background-color: transparent;
     -webkit-box-shadow: 10px 6px 75px -27px rgba(0,0,0,1);
     -moz-box-shadow: 10px 6px 75px -27px rgba(0,0,0,1);
     box-shadow: 10px 6px 75px -27px rgba(0,0,0,1);
-    border-radius: 10px;
+    /* border-radius: 10px; */
     padding: 5px
 }
 
@@ -139,7 +140,7 @@ background-color: transparent;
 }
 
 .parraf1{
-    font-size: 23px
+    font-size: 20px
 }
 
 
@@ -162,7 +163,7 @@ background-color: transparent;
 }
 
 .section-servicios{
-    background-color: rgba(121, 145, 26, 0.377);
+    background-color: rgba(214, 221, 224, 0.377);
     padding-top:45px;
     background-image: url(../assets/Slider/fondy-home.jpg);
     background-size: cover
@@ -175,8 +176,8 @@ background-color: transparent;
 }
 
 .serv-di-web{
-    border:1px solid rgb(255, 255, 255);
-    background-color:rgb(211, 212, 194);
+    border:1px solid rgb(55, 35, 170);
+    background-color:rgb(211, 215, 223);
     padding: 5px;
 }
 
@@ -221,25 +222,44 @@ background-color: transparent;
 .section-b{
     background:#333;
     color:#fff;
+    height: 500px
+}
+
+
+.section-a{
+    padding-bottom: 5px
 }
 
 /* Media patalla pequeñas */
 
 @media screen and (max-width: 39.99875em){
     .header{
-        position: unset;
+        /* position: unset; */
+    }
+    .section-nosotros2{
+        background-color: rgba(14, 13, 13, 0.7);
+        height: 440px;
+    }
+
+    #servicios{
+        padding-top: 200px
     }
 }
 
+
 /* Media panatalla mediana */
 @media print, screen and (min-width: 40em){
-   
+   .card{
+    height: 460px
+   }
 }
 
 
 /* Pantallas grandes */
 @media print, screen and (min-width: 64em){
-    
+    .card{
+        height: 460px
+       }
 }
 
 
